--- a/style.css
+++ b/style.css
@@ -1,12 +1,40 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #2C3333;
+    margin: 0;
+    font-family: 'Segoe UI', Verdana, sans-serif;
+    background-color: #222222;
+    color: white;
+    text-align: justify;
 }
 
-card {
-    background-color: #395B64;
+.topnav {
+    background-color: #212920;
+    overflow: hidden;
 }
 
-h1 {
-    color: #E7F6F2;
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: #78AC3D;
+    color: white;
+}
+
+.content {
+    margin: auto;
+    padding: 2%;
+    width: 90%;
+}
+
+.weapon-list {
+    line-height: 200%;
 }
